imagenes para el upload_files y tabla de precios

--- a/tabla_de_precios/index.html
+++ b/tabla_de_precios/index.html
@@ -14,7 +14,7 @@
             <div class="title">Plan inicial</div>
             <div class="price">
                 <span class="currency">$</span>
-                <span class="number">69</span>
+                <span class="number">29</span>
                 <span class="frequency">/mo</span>
             </div>
 
@@ -59,10 +59,10 @@
         </div>
 
         <div class="table recommended">
-            <div class="title">Plan inicial</div>
+            <div class="title">Plan premium</div>
             <div class="price">
                 <span class="currency">$</span>
-                <span class="number">69</span>
+                <span class="number">59</span>
                 <span class="frequency">/mo</span>
             </div>
 
@@ -107,10 +107,10 @@
         </div>
 
         <div class="table">
-            <div class="title">Plan inicial</div>
+            <div class="title">Plan Familiar</div>
             <div class="price">
                 <span class="currency">$</span>
-                <span class="number">69</span>
+                <span class="number">79</span>
                 <span class="frequency">/mo</span>
             </div>
     
